--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "vite": "^3.1.0"
   },
   "dependencies": {
+    "axios": "^1.1.3",
+    "file-saver": "^2.0.5",
+    "icp-create-server": "file:../icp-create-server/icp-create-server-1.0.0.tgz",
     "reveal.js": "^4.3.1"
   }
 }
