--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "axios": "^1.1.3",
     "file-saver": "^2.0.5",
+    "icp-bundle": "file:../icp-bundle/icp-bundle-0.1.1.tgz",
     "icp-create-server": "file:../icp-create-server/icp-create-server-1.0.0.tgz",
     "reveal.js": "^4.3.1"
   }
