--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^1.0.2",
     "@tsconfig/svelte": "^3.0.0",
+    "@types/quill": "^2.0.9",
     "autoprefixer": "^10.4.12",
     "gh-pages": "^4.0.0",
     "postcss": "^8.4.17",
@@ -27,8 +28,9 @@
   "dependencies": {
     "axios": "^1.1.3",
     "file-saver": "^2.0.5",
-    "icp-bundle": "^0.1.2",
+    "icp-bundle": "^0.1.3",
     "icp-create-server": "^1.0.0",
+    "quill": "^1.3.7",
     "reveal.js": "^4.3.1"
   }
 }
