--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "svelte": "^3.49.0",
     "svelte-check": "^2.8.1",
     "svelte-preprocess": "^4.10.7",
-    "tailwindcss": "^3.1.8",
+    "tailwindcss": "^3.2.1",
     "tslib": "^2.4.0",
     "typescript": "^4.6.4",
     "vite": "^3.1.0"
@@ -28,9 +28,10 @@
   "dependencies": {
     "axios": "^1.1.3",
     "file-saver": "^2.0.5",
-    "icp-bundle": "^0.1.3",
+    "icp-bundle": "^0.1.4",
     "icp-create-server": "^1.0.0",
     "interactjs": "^1.10.17",
+    "jszip": "^3.10.1",
     "quill": "^1.3.7",
     "reveal.js": "^4.3.1",
     "uuid": "^9.0.0"
